--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,10 @@ dmypy.json
 
 # VS Code
 *.code-workspace
+.vscode/
+
+# Ignored directories
+commercial-search/SimpleWiki/
+
+# Databases
+*.db
