Manually load config

--- a/commercial-search/env.example
+++ b/commercial-search/env.example
@@ -1,3 +1,4 @@
 # Replace the example values and rename to .env
 SQLALCHEMY_DATABASE_URI=sqlite:///babel.db
+SQLALCHEMY_TRACK_MODIFICATIONS=False
 SERVER_NAME=babelsearch.ml
