Update default env

--- a/commercial-search/env.example
+++ b/commercial-search/env.example
@@ -1,4 +1,4 @@
 # Replace the example values and rename to .env
-SQLALCHEMY_DATABASE_URI=sqlite:///babel.db
+SQLALCHEMY_DATABASE_URI=sqlite:///badsearch.db
 SQLALCHEMY_TRACK_MODIFICATIONS=False
-SERVER_NAME=babelsearch.ml
+SERVER_NAME=badsearch.ml
