--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_RSA }}
-          script: conda activate badsearch && flask gen-sitemaps; sudo systemctl restart badsearch
+          script: cd ${{ secrets.DEPLOY_DIR }} && conda activate badsearch && flask gen-sitemaps; sudo systemctl restart badsearch
